// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a loading animation 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 dAkUtt"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="false"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      >
        <img
          alt="loading"
          class="loader right"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Button renders a danger button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 jwoTTU"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a disabled button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 dAkUtt"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a link button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 jUHAua"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a primary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 dOsUjW"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a secondary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 hoQCmD"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a warning button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 wOGOX"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx Button__StyledBox-sc-160jtek-0 csBpNY"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 hoQCmD"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dvWsxl Button__StyledLoadingIndicator-sc-160jtek-1 kQvZvw"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;
